# World-cup-predictor

./: .env.example  .gitignore  README.md  TODO.md  f1.html  index.html  pyproject.toml  sweepstake_odds.md  worldcup_group_stage.ics  worldcup_next_week.ics
.github/workflows/: ci.yml  live.yml  refresh.yml
data/: fifa_worldcup_2026_schedule.csv  historical_matches.csv  odds.csv  odds_history.csv  outright_history.csv  outright_odds.csv  predictions.csv  ratings_history.csv  results.csv  seed_ratings.csv  strength_prior.csv  teams.csv
data/f1/: calendar_2026.csv
scripts/: decompose_outright.py  fetch_f1.py  fetch_f1_calendar.py  fetch_history.py  fetch_odds.py  fetch_strength_prior.py  game_imminent.py  load_outright_odds.py  load_real_odds.py  make_calendar.py  make_dashboard.py  make_f1_dashboard.py  make_sample_odds.py  replay_2026.sh  respread_seeds.py  sweepstakes.py  validate_f1.py  validate_f1_history.py  validate_prior.py  validate_strength_prior.py
src/wcpredictor/: __init__.py  betting.py  calibration.py  cli.py  config.py  data_io.py  elo.py  f1.py  fetch.py  history.py  (+8 more)
tests/: conftest.py  test_betting.py  test_bracket.py  test_calibration.py  test_clinch.py  test_clv.py  test_config.py  test_elo.py  test_f1.py  test_f1_calendar.py  test_fetch_odds.py  test_fetch_results.py  test_form.py  test_game_imminent.py  test_history.py  test_history_data.py  test_import.py  test_knockout.py  test_learn.py  test_match.py  test_metrics.py  test_poisson.py  test_scenarios.py  test_simulate.py  test_strength_prior.py  test_tournament.py
web/: index.html
