[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wcpredictor"
version = "0.1.0"
description = "A self-learning Monte Carlo World Cup predictor engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
api = ["requests>=2.25"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
wcpredict = "wcpredictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
